--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="font_blue">#0076ff</color>
     <color name="font_orange">#ff9833</color>
     <color name="item_pressed">#f6f6f6</color>
+    <color name="font_red">#cc0000</color>
 
     <!-- 二维码 -->
     <color name="viewfinder_mask">#60000000</color>
