直播课，促销

--- a/app/src/main/res/drawable/common_edittext_bg_with_corner.xml
+++ b/app/src/main/res/drawable/common_edittext_bg_with_corner.xml
@@ -4,4 +4,5 @@
             android:color="@color/search_stroke"
             android:width="@dimen/px1"/>
     <solid android:color="@color/white"/>
+    <corners android:radius="@dimen/px5"/>
 </shape>
