优化主界面，我的课列表

--- a/app/src/main/res/drawable/common_grey_stroke.xml
+++ b/app/src/main/res/drawable/common_grey_stroke.xml
@@ -4,4 +4,5 @@
     <stroke
             android:color="@color/stroke_common"
             android:width="@dimen/px1"/>
+    <corners android:radius="@dimen/px5"/>
 </shape>
