--- a/app/src/main/res/drawable/common_light_stroke.xml
+++ b/app/src/main/res/drawable/common_light_stroke.xml
@@ -4,4 +4,5 @@
     <stroke
             android:color="@color/main_orange"
             android:width="@dimen/px1"/>
+    <corners android:radius="@dimen/px5"/>
 </shape>
