--- a/app/src/main/res/layout/layout_my_course.xml
+++ b/app/src/main/res/layout/layout_my_course.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="@dimen/px26"
                 android:layout_marginLeft="@dimen/px24"
                 android:layout_marginRight="@dimen/px24"
-                android:layout_marginBottom="@dimen/px36">
+                android:layout_marginBottom="@dimen/px40">
 
             <FrameLayout
                     android:id="@+id/image"
@@ -81,7 +81,7 @@
                         android:maxLines="1"
                         android:ellipsize="end"
                         android:textColor="@color/common_text"
-                        android:layout_marginTop="@dimen/px14"
+                        android:layout_marginTop="@dimen/px16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -107,6 +107,7 @@
                             android:layout_alignParentLeft="true"
                             android:layout_centerInParent="true"
                             android:textSize="@dimen/font_28px"
+                            android:textStyle="bold"
                             android:textColor="@color/red"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -115,7 +116,7 @@
                             android:id="@+id/course_desc"
                             android:layout_centerInParent="true"
                             android:layout_toRightOf="@id/course_price"
-                            android:textSize="@dimen/font_26px"
+                            android:textSize="@dimen/font_22px"
                             android:layout_toLeftOf="@id/course_state"
                             android:layout_marginLeft="@dimen/px10"
                             android:maxLines="1"
